force-app/main/default/objects/copado__OrgDiff__c/fields/copado__Last_Modified_By_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Modified_By_Name__c</fullName>
    <inlineHelpText>If a value is entered, only modifications from this user will be included in the Diff. Use the user Full Name</inlineHelpText>
    <label>Last Modified By Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>