force-app/main/default/objects/copado__OrgDiff__c/fields/copado__Metadata_Types__c.field-meta.xml
<CustomField>
    <fullName>copado__Metadata_Types__c</fullName>
    <inlineHelpText>Empty means all types. Select one or more types to limit the Org Difference only to selected items.</inlineHelpText>
    <label>Metadata Types</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>