force-app/main/default/objects/copado__OrgDiff__c/fields/copado__To_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__To_Date__c</fullName>
    <inlineHelpText>If a value is entered only modification before this date (inclusive) will be added in the Diff</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>