force-app/main/default/objects/copado__OrgDiff__c/validationRules/copado__Should_be_differents.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Should_be_differents</fullName>
    <active>true</active>
    <errorConditionFormula>copado__From_Org__c =  copado__To_Org__c</errorConditionFormula>
    <errorDisplayField>copado__To_Org__c</errorDisplayField>
    <errorMessage>The Org&apos;s to be compared can not be the same.</errorMessage>
</ValidationRule>