force-app/main/default/objects/copado__OrgDiff__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__From_Org__c</columns>
    <columns>copado__To_Org__c</columns>
    <columns>copado__From_Date__c</columns>
    <columns>copado__To_Date__c</columns>
    <columns>copado__Last_Modified_By_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>